<resources>
    <string name="fuel">Fuel</string>
    <string name="money">Money</string>
    <string name="liters">Liters</string>
    <string name="app_name">Expenses</string>
    <string name="km">KM</string>
    <string name="product_name">Product Name</string>
    <string name="price">price</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="setting">setting</string>
    <string name="title_activity_fuel_settings">FuelSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync table periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>