<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/TextKM"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/km"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextLiters" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liters"
        app:layout_constraintBottom_toBottomOf="@+id/TextLiters"
        app:layout_constraintEnd_toStartOf="@+id/TextLiters"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TextLiters"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km"
        app:layout_constraintBottom_toBottomOf="@+id/TextKM"
        app:layout_constraintEnd_toStartOf="@+id/TextLiters"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TextKM"
        app:layout_constraintVertical_bias="0.78" />

    <EditText
        android:id="@+id/TextLiters"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/liters"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextMoney" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuel"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00" />

    <EditText
        android:id="@+id/TextMoney"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/money"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money"
        app:layout_constraintBottom_toBottomOf="@+id/TextMoney"
        app:layout_constraintEnd_toStartOf="@+id/TextMoney"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextKM" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="225dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/PriceOfLiter"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="price of liter"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/LiterIn100"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="1/100"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/KMPerLiter"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:text="KM per 1 liter"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>