<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/row_select">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/textView_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/money"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/row_text_money"
                app:layout_constraintTop_toBottomOf="@+id/row_text_money" />

            <TextView
                android:id="@+id/textView_liter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/liters"
                app:layout_constraintStart_toStartOf="@+id/row_text_liter"
                app:layout_constraintTop_toBottomOf="@+id/row_text_liter" />

            <TextView
                android:id="@+id/textView_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km"
                app:layout_constraintStart_toStartOf="@+id/row_text_km"
                app:layout_constraintTop_toBottomOf="@+id/row_text_km" />

            <TextView
                android:id="@+id/textView_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="time"
                app:layout_constraintStart_toStartOf="@+id/row_text_time"
                app:layout_constraintTop_toBottomOf="@+id/row_text_time" />

            <TextView
                android:id="@+id/row_text_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/money"
                app:layout_constraintStart_toEndOf="@+id/textView_time"
                app:layout_constraintTop_toTopOf="@+id/row_text_time" />

            <TextView
                android:id="@+id/row_text_liter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:text="@string/liters"
                app:layout_constraintStart_toEndOf="@+id/textView_money"
                app:layout_constraintTop_toTopOf="@+id/row_text_money" />

            <TextView
                android:id="@+id/row_text_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:text="@string/km"
                app:layout_constraintStart_toEndOf="@+id/textView_liter"
                app:layout_constraintTop_toTopOf="@+id/row_text_liter" />

            <TextView
                android:id="@+id/row_text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/fuel_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="id"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>