<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FuelActivity">


    <EditText
        android:id="@+id/TextKM2"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/km"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextLiters2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liters"
        app:layout_constraintBottom_toBottomOf="@+id/TextLiters2"
        app:layout_constraintEnd_toStartOf="@+id/TextLiters2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TextLiters2"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km"
        app:layout_constraintBottom_toBottomOf="@+id/TextKM2"
        app:layout_constraintEnd_toStartOf="@+id/TextLiters2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TextKM2"
        app:layout_constraintVertical_bias="0.78" />

    <EditText
        android:id="@+id/TextLiters2"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/liters"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextMoney2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fuel update"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00" />

    <EditText
        android:id="@+id/TextMoney2"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/money"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money"
        app:layout_constraintBottom_toBottomOf="@+id/TextMoney2"
        app:layout_constraintEnd_toStartOf="@+id/TextMoney2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextKM2"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPriceOfLiter"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="price of liter"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/PriceOfLiter2"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textKMPerLiter"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="one liter gives"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/KMPerLiter2"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="100 KM in liter"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/LiterIn1002"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="delete"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="@+id/button_update"
        app:layout_constraintStart_toStartOf="@+id/button_update"
        app:layout_constraintTop_toBottomOf="@+id/button_update" />

</androidx.constraintlayout.widget.ConstraintLayout>